--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
     <header>
         <nav>
             <ul>
-                <h1 style="font-family: 'Courier New', Courier, monospace; font-size: 40px;">Treaty One - Manitoba</h1>
+                <h1>Treaty One - Manitoba</h1>
                 <li><a href="index.html">Go To The Home Page</a></li>
                 <li><a href="history.html">Learn About The History Of Treaty One</a></li>
                 <li><a href="today.html">Learn About Treaty One In 2024</a></li>
@@ -60,7 +60,7 @@
                     adapting to new ways of life. Treaty One reflects these conflicting goals, leaving behind unresolved issues due to different 
                     interpretations of the agreement by both parties.
                     <!--source for this paragraph-->
-                    <span>Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/treaties-1-and-2" target="_blank">Treaties 1 and 2 - Canadian Encyclopedia</a></span>
+                    <span class="paragraph-source">Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/treaties-1-and-2" target="_blank">Treaties 1 and 2 - Canadian Encyclopedia</a></span>
                 </pre>
             </section>
             
@@ -74,7 +74,7 @@
                     these promises were not formally written into the treaty, leading to disputes later on. The government eventually recognized these outside promises in an official 
                     document to honor the verbal commitments.
                     <!--source for this paragraph-->
-                    <span>Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/treaties-1-and-2" target="_blank">Treaties 1 and 2 - Canadian Encyclopedia</a></span>
+                    <span class="paragraph-source">Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/treaties-1-and-2" target="_blank">Treaties 1 and 2 - Canadian Encyclopedia</a></span>
                 </pre>
             </section>              
         <!--article for housing the images in figure with figcaption-->
@@ -84,7 +84,7 @@
                     <img src="media/signingoftreatyone.jpg" alt="A drawing depicting the negotiations for Treaty 1 that took place at Lower Fort Garry in 1871, involving the Ojibwe, Swampy Cree, and other groups in southern Manitoba."/>
                     <figcaption>
                         A black and white drawing depicting the negotiation and signing of Treaty One at Lower Fort Garry in 1871. Present there are the Ojibwe, Swampy Cree and others, along with representatives from the Canadian Government.<br/>
-                        <span>Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/treaties-1-and-2" target="_blank">Treaties 1 and 2 - Canadian Encyclopedia</a></span>
+                        <span class="media-source">Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/treaties-1-and-2" target="_blank">Treaties 1 and 2 - Canadian Encyclopedia</a></span>
                     </figcaption>
                 </figure>
             </div>
