--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Name: Daniel Li
 Course: Web Development 20S
 Teacher: Ms. Hoitink
 School: Pembina Trails Collegiate (PTC)
-Date Last Modified: Oct 21st, 2024
+Date Last Modified: Nov 13th, 2024
 -->
 
 <!DOCTYPE html>
@@ -24,7 +24,7 @@ Date Last Modified: Oct 21st, 2024
     <header>
         <nav>
             <ul>
-                <h1 style="font-family: 'Courier New', Courier, monospace; font-size: 40px;">Treaty One - Manitoba</h1>
+                <h1>Treaty One - Manitoba</h1>
                 <li><a href="index.html">Go To The Home Page</a></li>
                 <li><a href="history.html">Learn About The History Of Treaty One</a></li>
                 <li><a href="today.html">Learn About Treaty One In 2024</a></li>
@@ -50,7 +50,7 @@ Date Last Modified: Oct 21st, 2024
                     included promises about land, resources, and the protection of First Nations' way of life. However, the treaty 
                     has been the subject of many misunderstandings and misinterpretations by both parties.
                     <!--source for where i got the information-->
-                    <span style="font-style: italic; font-size: small;">Source: <a href="https://en.wikipedia.org/wiki/Treaty_1" target="_blank">Treaty 1 - Wikipedia</a></span>
+                    <span class="paragraph-source">Source: <a href="https://en.wikipedia.org/wiki/Treaty_1" target="_blank">Treaty 1 - Wikipedia</a></span>
                 </pre>
             </section>
             
@@ -61,7 +61,7 @@ Date Last Modified: Oct 21st, 2024
                     However, over time, many First Nations leaders argue that the Canadian government has not honored the promises 
                     made in these treaties, leading to disputes and calls for renegotiation or recognition of the promised treaty rights.
                     <!--source for where i got the information-->
-                    <span style="font-style: italic; font-size: small;">Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/aboriginal-treaties" target="_blank">Treaties with Indigenous Peoples in Canada - The Canadian Encyclopedia</a></span>
+                    <span class="paragraph-source">Source: <a href="https://www.thecanadianencyclopedia.ca/en/article/aboriginal-treaties" target="_blank">Treaties with Indigenous Peoples in Canada - The Canadian Encyclopedia</a></span>
                 </pre>
             </section>
         </article>              
@@ -74,7 +74,7 @@ Date Last Modified: Oct 21st, 2024
                     <img src="media/treatymaps.jfif" alt="Colour Indicated Map of First Nations and Treaty Areas in Manitoba, Canada."/>
                     <figcaption style="font-style:italic;">
                         A map showcasing the First Nations and Treaty Areas in the province outline of Manitoba, with legends and colored areas to indicate locations and the areas of Treaty One to Five. <br/>
-                        <span style="font-size:small;">Source: <a href="https://www.manitobapossible.ca/land-acknowledgement" target="_blank">Land Acknowledgement - Manitoba Possible</a></span><br/>
+                        <span class="media-source">Source: <a href="https://www.manitobapossible.ca/land-acknowledgement" target="_blank">Land Acknowledgement - Manitoba Possible</a></span><br/>
                     </figcaption>
                     
                     <br/>
@@ -82,7 +82,7 @@ Date Last Modified: Oct 21st, 2024
                     <img src="media/numbered-treaties-cananda.jpg" alt="A gray and white map showcasing the areas occupied by all eleven numbered treaties in Canada."/>
                     <figcaption style="font-style:italic;">
                         A white map showing the outlines of Canada and its provinces and territories, with gray sections highlighting each individual areas occupied by all of the eleven numbered treaties, with the year of their signing present in the coloured spot. <br/>
-                        <span style="font-size:small;">Source: <a href="https://winnipeg.ctvnews.ca/the-numbered-treaties-in-canada-and-where-they-are-located-1.5606007" target="_blank">The Numbered Treaties In Canada And Where They Are Located - CTV News</a></span>
+                        <span class="media-source">Source: <a href="https://winnipeg.ctvnews.ca/the-numbered-treaties-in-canada-and-where-they-are-located-1.5606007" target="_blank">The Numbered Treaties In Canada And Where They Are Located - CTV News</a></span>
                     </figcaption>
                 </figure>
             </div>
