--- a/today.html
+++ b/today.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul>
-                <h1 style="font-family: 'Courier New', Courier, monospace; font-size: 40px;">Treaty One - Manitoba</h1>
+                <h1>Treaty One - Manitoba</h1>
                 <li><a href="index.html">Go To The Home Page</a></li>
                 <li><a href="history.html">Learn About The History Of Treaty One</a></li>
                 <li><a href="today.html">Learn About Treaty One In 2024</a></li>
