--- a/today.html
+++ b/today.html
@@ -7,6 +7,12 @@
     <title>Treaty One - Today</title>
     <link rel="stylesheet" href="CSS/styles.css"/>
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
+
+    <style>
+        figcaption{
+            font-style:italic;
+        }
+    </style>
 </head>
 
 <!--body to contain the content of this page-->
@@ -18,7 +24,7 @@
                 <h1>Treaty One - Manitoba</h1>
                 <li><a href="index.html">Go To The Home Page</a></li>
                 <li><a href="history.html">Learn About The History Of Treaty One</a></li>
-                <li><a href="today.html">Learn About Treaty One In 2024</a></li>
+                <li><a href="today.html">Learn About Treaty One Today</a></li>
                 <li><a href="sources.html">Go To Sources Of Information</a></li>
             </ul>
         </nav>
@@ -29,8 +35,49 @@
 
     <!--main for the main content on this page-->
     <main>
+        <!--article for containing the sections-->
         <article id="treaty-one-today">
             <h2>Treaty One Today</h2>
+            <!--sections for the paragraphs with the information regarding the topic-->
+            <section>
+                <pre>
+                        Today, opinions still vary regarding the many aspects and terms of Treaty One. Still, the Canadian government seeks to reconcile and acknowledges 
+                    the wrongdoings of the past, choosing to lead a better future together along with the Indigenous people. In 2021, marked the 150<sub>th</sub> anniversary 
+                    of the signing of Treaty One, with a ceremony held at Lower Fort Gary to commemorate this event. "The hardest thing is to work in partnerships sometimes ... 
+                    you have to come to one mind and move forward and these are occasions to honour treaty relationships but also to hear the words that were heartfelt today 
+                    with open hands and open hearts," said Canada's Indigenous Services Minister Marc Miller at the ceremony, "I'm hopeful."
+                    <!--where i got this information from-->
+                    <span class="paragraph-source">Source: <a href="https://www.cbc.ca/news/canada/manitoba/treaty-1-150-anniversary-manitoba-1.6127891" target="_blank">Manitoba First Nations commemorate 150th anniversary of Treaty 1 signing - CBC News</a></span>
+                </pre>
+            </section>
+
+            <section>
+                <pre>
+                        There are seven Treaty One First Nation communities today: Brokenhead Ojibway Nation, Peguis First Nation, Roseau River Anishinabe First Nation, 
+                    Sagkeeng First Nation, Sandy Bay Ojibway First Nation, Swan Lake First Nation, and Long Plain First Nation. Most of these First Nations today focus 
+                    on economic development through urban reserves, which provide economic opportunities and support better self-sufficiency. Many urban reserves, like 
+                    the Kapyong Barracks, are redevelopment by the seven treaty nations into a spot for business and community. These initiatives help generate revenue, 
+                    create jobs for people, and overall enhances the community infrastructure. Many other projects, which includes the Crossing Gas Bar and commercial spaces
+                    located on the Long Plain Reserve No.6, reflects the potential and growth of urban reserves to support sustainability. Such developments contribute to both the 
+                    cultural aspects of these communities and the broader economy.
+                    <!--where i got the information from-->
+                    <span class="paragraph-source">Source: <a href="https://www.cbc.ca/news/canada/manitoba/naawi-oodena-repatriation-winnipeg-largest-urban-reserve-1.6691359" target="_blank">Naawi-Oodena officially becomes largest urban reserve in Canada after repatriation of Winnipeg barracks - CBC News</a></span>
+                    <span class="paragraph-source">Source: <a href="https://www.arrowheadcorp.ca/long-plain-reserve-no-6/" target="_blank">Long Plain Reserve No.6 - Arrowhead Development Corporation</a></span>
+                </pre>
+            </section>
+        </article>
+
+        <!--article for housing the images in a figure along with a figcaption and alt text for the image and figure-->
+        <article>
+            <div class="images">
+                <figure>
+                    <img src="media/former-kapyong-barracks-master-plan.avif" alt="A 3D rendered image of what the future could hold for the Kapyong Barracks, now turned urban reserve. The image depicts commercial and residential buildings.">
+                    <figcaption>
+                        What the future could look like for the former Kapyong Barracks, with what potential commercial and residential buildings that could be built on the land.<br/>
+                        <span class="media-source">Source: <a href="https://www.cbc.ca/news/canada/manitoba/naawi-oodena-repatriation-winnipeg-largest-urban-reserve-1.6691359" target="_blank">Naawi-Oodena officially becomes largest urban reserve in Canada after repatriation of Winnipeg barracks - CBC News</a></span>
+                    </figcaption>
+                </figure>
+            </div>
         </article>
     </main>
 
