--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Date Last Modified: Nov 13th, 2024
                 <h1>Treaty One - Manitoba</h1>
                 <li><a href="index.html">Go To The Home Page</a></li>
                 <li><a href="history.html">Learn About The History Of Treaty One</a></li>
-                <li><a href="today.html">Learn About Treaty One In 2024</a></li>
+                <li><a href="today.html">Learn About Treaty One Today</a></li>
                 <li><a href="sources.html">Go To Sources Of Information</a></li>
             </ul>
         </nav>
